worked a bit on issues with bio picture on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -216,13 +216,13 @@ box-shadow: 1px 1px 5px;
   }
   main {
     height: 53vh;
-    margin: 15vh auto 5vh auto;
+    margin: 7vh auto 5vh auto;
     
   }
 
   #bio-main{
     height: 53vh;
-    margin: 170px auto 5vh auto; 
+    margin: 130px auto 5vh auto; 
   }
 
   #name-on-bar{
@@ -235,7 +235,7 @@ box-shadow: 1px 1px 5px;
   }
 
   #picture{
-    margin-top: 100px;
+    margin: 100px auto auto auto;
     padding-top: 100px;
   }
 }
